Seperate package into client/server and get server -> client comms working

--- a/examples/basic_stream/basic_stream.html
+++ b/examples/basic_stream/basic_stream.html
@@ -9,5 +9,9 @@
 </body>
 
 <template name="hello">
-    <p>Current random number {{random}}.</p>
+    <p>Datum: {{datum.value}}</p>
+    <p>Last Updated: {{datum.time}}</p>
+    <br/>
+    <br/>
+    <p>Stat: {{stat}}</p>
 </template>
