Make stat use PassthroughCollection

--- a/examples/basic_stream/basic_stream.html
+++ b/examples/basic_stream/basic_stream.html
@@ -13,5 +13,6 @@
     <p>Last Updated: {{datum.time}}</p>
     <br/>
     <br/>
-    <p>Stat: {{stat}}</p>
+    <p>Stat: {{stat.value}}</p>
+    <p>Last Updated: {{stat.time}}</p>
 </template>
